crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__groups-sign.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Child"
          },
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "2;0",
        "role": "Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "media",
        "filename": "groups-sign",
        "media_type": "video"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Sign language groups on main tier using CJK brackets"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: main_sin_group, sin_begin_group, sin_end_group"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "annotated_action"
            },
            {
              "type": "word",
              "raw_text": "foo",
              "cleaned_text": "foo",
              "content": [
                {
                  "type": "text",
                  "content": "foo"
                }
              ]
            },
            {
              "type": "annotated_action"
            },
            {
              "type": "sin_group",
              "content": {
                "content": [
                  {
                    "type": "word",
                    "raw_text": "bar",
                    "cleaned_text": "bar",
                    "content": [
                      {
                        "type": "text",
                        "content": "bar"
                      }
                    ]
                  },
                  {
                    "type": "word",
                    "raw_text": "baz",
                    "cleaned_text": "baz",
                    "content": [
                      {
                        "type": "text",
                        "content": "baz"
                      }
                    ]
                  }
                ]
              }
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      },
      "dependent_tiers": [
        {
          "type": "Sin",
          "data": {
            "items": [
              {
                "type": "token",
                "content": "g:toy:dpoint"
              },
              {
                "type": "token",
                "content": "b"
              },
              {
                "type": "sin_group",
                "content": [
                  "c",
                  "d"
                ]
              },
              {
                "type": "token",
                "content": "e"
              }
            ]
          }
        }
      ]
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "2;0",
        "role": "Child"
      },
      "birth_date": null
    },
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": [],
  "media": {
    "filename": "groups-sign",
    "media_type": "video"
  }
}
