crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-media-notrans.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          },
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Target_Child"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "sample",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "sample",
        "speaker": "CHI",
        "age": "1;10.04",
        "role": "Target_Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "media",
        "filename": "headers-media-notrans",
        "media_type": "video",
        "status": "notrans"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Media header with notrans (not yet transcribed) status"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: notrans_value — file has no utterances, media awaits transcription"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "sample",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    },
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Target_Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "sample",
        "speaker": "CHI",
        "age": "1;10.04",
        "role": "Target_Child"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": [],
  "media": {
    "filename": "headers-media-notrans",
    "media_type": "video",
    "status": "notrans"
  }
}
